--- a/clock/index.html
+++ b/clock/index.html
@@ -1,5 +1,3 @@
-<!-- http://www.clocktab.com/ -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,24 +5,24 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet" />
 </head>
-<body onload="startTime()">
-	<div id="container">
-		<div id="clock">
-			<div id="inner_clock">
-				<div id="time">
-					<div id="hour">00:00</div>
-					<div id="ampm_sec">
-						<div id="ampm">PM</div>
-						<div id="sec">00</div>
+<body>
+	<div class="container">
+		<div class="clock">
+			<div>
+				<div class="time">
+					<div class="hour">00:00</div>
+					<div>
+						<div class="ampm">PM</div>
+						<div class="sec">00</div>
 					</div>
 				</div>
 				<div id="date">
-					<div id="weekday">Thursday</div>
-					 - 
-					<div id="month">July</div>
-					<div id="monthday">20</div>
+					<div>Thursday</div>
+					 -
+					<div>July</div>
+					<div>20</div>
 				</div>
-			</div>	
+			</div>
 		</div>
 	</div>
 
